--- a/templates/base/topic_component.html
+++ b/templates/base/topic_component.html
@@ -4,7 +4,9 @@
   </div>
   <ul class="topics__list">
     <li>
-      <a href="{% url 'home' %}" class="active"> All <span>{{topics.count}}</span></a>
+      <a href="{% url 'home' %}" class="active">
+        All <span>{{topics.count}}</span></a
+      >
     </li>
 
     {% for topic in topics%}
@@ -15,6 +17,7 @@
     </li>
     {%endfor%}
   </ul>
+  {% if topic.room_set.all.count >= 4 %}
   <a class="btn btn--link" href="topics.html">
     More
     <svg
@@ -28,4 +31,5 @@
       <path d="M16 21l-13-13h-3l16 16 16-16h-3l-13 13z"></path>
     </svg>
   </a>
+  {% endif %}
 </div>
