--- a/templates/base/activity_feed.html
+++ b/templates/base/activity_feed.html
@@ -1,7 +1,7 @@
 {% for message in room_messages %}
 <div class="activities__box">
   <div class="activities__boxHeader roomListRoom__header">
-    <a href="{% url 'profile' message.user.id %}" class="roomListRoom__author">
+    <a href="{% url 'user' message.user.id %}" class="roomListRoom__author">
       <div class="avatar avatar--small">
         <img src="https://randomuser.me/api/portraits/women/11.jpg" />
       </div>
