--- a/templates/base/home.html
+++ b/templates/base/home.html
@@ -35,7 +35,7 @@
           <h2>Study Room</h2>
           <p>{{room_count}} Rooms Available</p>
         </div>
-        <a class="btn btn--main" href="{% url 'createroom' %}">
+        <a class="btn btn--main" href="{% url 'create-room' %}">
           <svg
             version="1.1"
             xmlns="http://www.w3.org/2000/svg"
