--- a/templates/base/room.html
+++ b/templates/base/room.html
@@ -78,7 +78,7 @@
           </div>
           <div class="room__hosted">
             <p>Hosted By</p>
-            <a href="{% url 'profile' room.host.id %}" class="room__author">
+            <a href="{% url 'user' room.host.id %}" class="room__author">
               <div class="avatar avatar--small">
                 <img src="https://randomuser.me/api/portraits/men/37.jpg" />
               </div>
@@ -96,7 +96,7 @@
               <div class="thread__top">
                 <div class="thread__author">
                   <a
-                    href="{% url 'profile' message.user.id %}"
+                    href="{% url 'user' message.user.id %}"
                     class="thread__authorInfo"
                   >
                     <div class="avatar avatar--small">
@@ -168,7 +168,7 @@
       <h3 class="participants__top">Participants <span>({{participants.all.count}} Joined)</span></h3>
       <div class="participants__list scroll">
         {% for user in participants %}
-        <a href="{% url 'profile' user.id %}" class="participant">
+        <a href="{% url 'user' user.id %}" class="participant">
           <div class="avatar avatar--medium">
             <img src="https://randomuser.me/api/portraits/men/37.jpg" />
           </div>
