--- a/templates/base/room_form.html
+++ b/templates/base/room_form.html
@@ -18,28 +18,29 @@
               ></path>
             </svg>
           </a>
-          <h3>Create Study Room</h3>
+          <h3>Create/Update Study Room</h3>
         </div>
       </div>
       <div class="layout__body">
         <form class="form" action="" method="POST">
-          {%csrf_token%} {% for field in form %}
+          {%csrf_token%}
           <div class="form__group">
-            <label for="room_name">{{field.label}}</label>
+            <label for="room_name">Room Name</label>
             <!-- <input
               id="room_name"
               name="room_name"
               type="text"
               placeholder="E.g. Mastering Python + Django"
             /> -->
-            {{field}}
+            {{form.name}}
           </div>
-          {% endfor %}
-          <!-- <div class="form__group">
-            <label for="room_topic">Topic</label>
+
+          <div class="form__group">
+            <label for="room_topic">Enter a Topic</label>
             <input
               required
               type="text"
+              value="{{room.topic.name}}"
               name="topic"
               id="room_topic"
               list="topic-list"
@@ -47,14 +48,27 @@
             <datalist id="topic-list">
               <select id="room_topic">
                 <option value="">Select your topic</option>
-                <option value="Python">Python</option>
-                <option value="Django">Django</option>
+                {% for topic in topics %}
+                <option value="{{topic.name}}">{{topic.name}}</option>
+                {% endfor %}
               </select>
             </datalist>
-          </div> -->
+          </div>
+
+          <div class="form__group">
+            <label for="room_description">Describe a bit about your Room</label>
+            <!-- <input
+              id="room_description"
+              name="room_description"
+              type="text"
+              placeholder="E.g. Mastering Python + Django"
+            /> -->
+            {{form.desc}}
+          </div>
+
           <div class="form__action">
             <a class="btn btn--dark" href="{% url 'home' %}">Cancel</a>
-            <button class="btn btn--main" type="submit">Create Room</button>
+            <button class="btn btn--main" type="submit">Submit</button>
           </div>
         </form>
       </div>
