--- a/templates/base/topic_component.html
+++ b/templates/base/topic_component.html
@@ -4,21 +4,18 @@
   </div>
   <ul class="topics__list">
     <li>
-      <a href="{% url 'home' %}" class="active">
-        All <span>{{topics.count}}</span></a
-      >
+      <a href="{% url 'home' %}" class="active"> All </a>
     </li>
 
-    {% for topic in topics%}
+    {% for topic in topics%} {% if topic.room_set.all.count > 0 %}
     <li>
       <a href="{% url 'home' %}?q={{topic.name}}"
         >{{topic.name}} <span>{{topic.room_set.all.count}}</span></a
       >
     </li>
-    {%endfor%}
+    {% endif %} {%endfor%}
   </ul>
-  {% if topic.room_set.all.count >= 4 %}
-  <a class="btn btn--link" href="topics.html">
+  <a class="btn btn--link" href="{% url 'topics' %}">
     More
     <svg
       version="1.1"
@@ -31,5 +28,4 @@
       <path d="M16 21l-13-13h-3l16 16 16-16h-3l-13 13z"></path>
     </svg>
   </a>
-  {% endif %}
 </div>
