--- a/templates/base/update_user.html
+++ b/templates/base/update_user.html
@@ -26,12 +26,12 @@
                         </div> -->
                         {% for field in form %}
                         <div class="form__group">
-                          <label for="{{field.label}}">{{field.label}}</label>
-                          <input type="text" name="{{field.label}}" id="{{field.label}}">
+                          <label for="profile_pic">{{field.label}}</label>
+                          {{field}}
                       </div>
                       {% endfor %}
                         <div class="form__action">
-                            <a class="btn btn--dark" href="index.html">Cancel</a>
+                            <a class="btn btn--dark" href="{{request.META.HTTP_REFERER}}">Cancel</a>
                             <button class="btn btn--main" type="submit">Update</button>
                         </div>
                     </form>
