--- a/templates/base/update_user.html
+++ b/templates/base/update_user.html
@@ -18,7 +18,7 @@
                     </div>
                 </div>
                 <div class="layout__body">
-                    <form class="form" method="POST">
+                    <form class="form" method="POST" enctype="multipart/form-data">
                       {% csrf_token %}
                         <!-- <div class="form__group">
                             <label for="profile_pic">Avatar</label>
